No reporting data exception fix